EPMRPP-64580 - prevent testCaseId field overlap (#2796)
* EPMRPP-64580 - prevent testCaseId field overlap

* EPMRPP-64580 - code review fixes - 1

--- a/app/src/pages/inside/logsPage/logItemInfo/logItemInfoTabs/logItemDetails/logItemDetails.scss
+++ b/app/src/pages/inside/logsPage/logItemInfo/logItemInfoTabs/logItemDetails/logItemDetails.scss
@@ -143,4 +143,9 @@
   line-height: 1.2;
   color: $COLOR--charcoal-grey;
   padding-bottom: 10px;
+  word-break: break-all;
+
+  @supports (word-break: break-word) {
+    word-break: break-word;
+  }
 }
